feat: unify plugin hub and builtin computer use
